...
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/edit_fragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
...
            app:counterMaxLength="20"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_reason_title"
            app:layout_constraintTop_toBottomOf="@id/emotion_chip_group">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_reason_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/roboto_thin"
                android:hint="@string/enter_reason"
...
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintStart_toEndOf="@+id/tv_photo_title"
            app:layout_constraintTop_toBottomOf="@+id/social_chip_group">

            <ImageButton
                android:id="@+id/capture_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
...
            android:fontFamily="@font/roboto_regular"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/tv_at"
            app:layout_constraintStart_toEndOf="@+id/tv_at" />

        <Button
            android:id="@+id/button_submit_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/rounded_button_blue"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/submit"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button_cancel_view"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/time_text_view"
            app:layout_constraintVertical_bias="0.0" />

        <Button
...
